Connecting Routes & RouterModule

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+<!--https://levelup.gitconnected.com/simple-application-with-angular-6-node-js-express-2873304fff0f-->
+<!--ng serve &#45;&#45;proxy-config proxy.conf.json-->
+
   <app-root></app-root>
   <!--<app-input-user-data-form></app-input-user-data-form>-->
 </body>
